# sleigh-dashboard

./: .gitignore  README.md  apache-setup.md  dashboard.py  dashboard.service  dashboard_.py  dashboard_instrument.py  dashboard_science.py  dashboard_thematic.py  data-dashboard.ipynb  data-dashboard.md  environmental.yml  icecaps-dashboard.qmd  make_windrose_plots.py  new_dashboard.py  oop_dashboard.py  pyproject.toml  requirements.txt  run_dashboard.sh  tab_cl61.py  test.ipynb
dashboard/: Dashboard.py  DataLoader.py  Plottables.py  Tab.py  TabView.py
docs/: index.html
docs/site_libs/bootstrap/: bootstrap.min.css
icecaps-dashboard_files/libs/bootstrap/: bootstrap.min.css
sleigh_dashboard/: Dashboard.py  DataLoader.py  Plottables.py  README.md  Tab.py  TabView.py  __init__.py
tabs/: __init__.py  tab_asfs.py  tab_cl61.py  tab_gpr.py  tab_mrr.py  tab_mvp.py  tab_simba.py  tab_weather.py
tabs/instrument/: __init__.py  tab_asfs.py  tab_cl61.py  tab_gfs.py  tab_gpr.py  tab_mrr.py  tab_mvp.py  tab_mwr.py  tab_simba.py  tab_turb.py
tabs/science/: tab_met.py  tab_seb.py
tabs/thematic/: __init__.py  tab_clouds.py  tab_met.py  tab_seb.py
